# jacsys

./: .gitignore  README.md~
cmake/: .CMakeLists.txt.swp  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.yun  CMakeLists.txt_local  CMakeLists.txt_ubuntu  CMakeLists.txt~  Makefile  cmake_install.cmake  out.txt  tags
database/: jacdb.sql
src/: MsgTypeDef.h  MsgTypeDef.h.pre  README  StuDef.h  XMLConfig.cc  XMLConfig.h  configFile.cc  configFile.h  database_operator.cc  database_operator.cc.pre  database_operator.h  database_operator.h.pre  gateway.h  gateway.h.pre  jacClient.cc  jacServer.cc  jacServer.cc.pre  jacServer.h  jaccfg.xml  preDef.h  preDef.h.pre  process.h  sqlitecpp.h  tags  testClient.cc  tools.h
src/cmake/: CMakeLists.txt~  out.txt
